--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "material-ui": "^0.20.0",
+    "moment": "^2.20.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-if": "^2.2.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sort-by": "^1.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
